fix(clayui.com): nav-toc is too wide, overlays examples
chore(clayui.com): Generate Sass API docs

--- a/clayui.com/src/styles/_guide.scss
+++ b/clayui.com/src/styles/_guide.scss
@@ -203,6 +203,7 @@
 			background-color: white;
 			margin-bottom: 0;
 			max-height: calc(100vh - 84px);
+			max-width: 280px;
 			min-width: 280px;
 			overflow-y: auto;
 			top: 84px;
